# Algoritmica

./: README.md
PRACTICA1/: practica1.odt
PRACTICA2/: a.out  combinatoria_recursividad.cpp
PRACTICA2/Programa/: CMakeLists.txt  COMPILAR.sh  Datos1.txt  Datos2.txt  Datos3.txt  Datos4.txt  Makefile  Metodos  P2  combinatoria.hpp  ejemplo_gnuplot.sh  funcionesAuxiliares.cpp  funcionesAuxiliares.hpp  grafico1.eps  grafico2.eps  grafico3.eps  grafico4.eps  principal.cpp
PRACTICA3/: CMakeLists.txt  Main  bignum.cpp  bignum.hpp  funcionesAuxiliares.cpp  principal.cpp  (+3 more)
PRACTICA5/: CMakeLists.txt  ClaseTiempo.cpp  dinero.hpp  funcionesAuxiliares.cpp  funcionesAuxiliares.hpp  mochila.hpp  principal.cpp  sistemaMonetario.cpp  sistemaMonetario.hpp
PRACTICA6/: CMakeLists.txt  README.txt
PRACTICA6/exports/backtrackingQueen/: AllSolution27QueenBacktracking.txt  AllSolution4QueenBacktracking.txt  AllSolution5QueenBacktracking.txt  AllSolution6QueenBacktracking.txt  AllSolution7QueenBacktracking.txt  AllSolution8QueenBacktracking.txt  AllSolution9QueenBacktracking.txt  FistSolution10QueenBacktracking.txt  FistSolution12QueenBacktracking.txt  FistSolution20QueenBacktracking.txt  FistSolution27QueenBacktracking.txt
PRACTICA6/exports/gnu_plots/: Datos5.txt  ejemplo_gnuplot.sh  grafico5.eps
PRACTICA6/exports/vegasQueen/: FistSolution10Queenvegas.txt  FistSolution12Queenvegas.txt  FistSolution20Queenvegas.txt  FistSolution30Queenvegas.txt  FistSolution8Queenvegas.txt
PRACTICA6/src/: estadistica.cpp  funcionesAuxiliares.cpp  funcionesAuxiliares.hpp  principal.cpp  reinas.hpp
(+24 files in other folders)
